////

[[release-notes-4.x]]
=== Node.js Agent version 4.x

See the <<upgrade-to-v4>> guide.


==== Unreleased

[float]
===== Breaking changes

[float]
===== Features

* Update <<opentelemetry-bridge>> support to `@opentelemetry/api` version 1.6.0.
  {pull}3622[#3622]

* Add support for `@aws-sdk/client-dynamodb`, one of the AWS SDK v3 clients.
  ({issues}2958[#2958])

[float]
===== Bug fixes

[float]
===== Chores

* Changes to cloud metadata collection for Google Cloud (GCP). Most notably
  the `cloud.project.id` field is now the `project-id` from
  https://cloud.google.com/compute/docs/metadata/default-metadata-values#project_metadata
  rather than the `numeric-project-id`. This matches the value produced by
  Elastic Beats (like filebeat). {issues}3614[#3614]


[[release-notes-4.0.0]]
==== 4.0.0 - 2023/09/07

[float]
===== Breaking changes

* Set the new minimum supported Node.js to version 14.17.0.
  Users of earlier Node.js versions can use elastic-apm-node v3.x, which
  supports back to Node.js v8.6.

* Ignore a `timer` option passed to `startTransaction()` and `startSpan()` APIs.
  This option was never documented. It would be surprising if any user is
  impacted by this.

* Remove long deprecated support for the `ELASTIC_APM_`-prefixed environment
  variables for the <<kubernetes-node-name,Kubernetes config options>>. For
  example, one must use `KUBERNETES_POD_NAME` and not
  `ELASTIC_APM_KUBERNETES_POD_NAME`. ({issues}2661[#2661])

* The config option `filterHttpHeaders` is now _removed_. ({pull}3539[#3539])

* Remove the deprecated `span.toString()` and `transaction.toString()` APIs.
  See <<v4-api-to-string,the upgrading doc>> for details. ({issues}2348[#2348])

* Remove instrumentation support for the old 'hapi' package -- the current
  '@hapi/hapi' package is still instrumented. ({issues}2691[#2691])

* Change `apm.startTransaction()` api to return a noop transaction instead of
  null, if the agent is not yet started. ({issues}2429[#2429])
