@@ -49,7 +49,7 @@ function getPathFromRequest(req, useBase, usePathAsTransactionName) {
   } else if (path && (path !== '/' || useBase)) {
     return path;
   } else if (req.baseUrl && req.baseUrl !== '/') {
-    return req.baseUrl
+    return req.baseUrl;
   }
 
   if (usePathAsTransactionName) {
